<resources>

    <!-- Shared Preferences -->
    <string name="shared_preferences_initial_permissions_never_ask_again_key" translatable="false">permissions_key</string>
    <string name="shared_preferences_initial_permissions_never_ask_again" translatable="false">permissions</string>

    <!--Strings-->
    <string name="app_name">TripChallenge</string>

    <!--Login-->
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="fb_key">1293424370727889</string>

    <!--Utils-->
    <string name="bundle_fragment">fragment</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="show_password">Show Password</string>
    <string name="no_account_yet_create_one">No account yet ? Create one</string>
    <string name="nick">Nick</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_email">Please enter the email your account was setup with</string>
    <string name="request_password_send">Password Request Send</string>
    <string name="check_email">Check your email for the link to reset your password</string>
    <string name="or">OR</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="log_in_with">Log in with</string>
    <string name="fragment_title_sign_up">Sign Up</string>
    <string name="fragment_title_login">Log In</string>
    <string name="trips">Trips</string>


</resources>
